# facet-owned-shape

./: AGENTS.md  Cargo.toml  README.md
src/: box_cow.rs  conversion.rs  cow_shape.rs  diff.rs  lib.rs  owned_shape.rs  relations.rs  sea_query.rs  vec_cow.rs
tests/: comprehensive_conversion_tests.rs  conversion_tests.rs  cow_conversion_tests.rs  diff_tests.rs  enum_conversion_tests.rs  sea_query_tests.rs  shape_conversion_tests.rs  sql_generation_tests.rs  validation_tests.rs  vec_cow_tests.rs
