[package]
name = "facet-owned-shape"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = "0.31.4"
facet-core = "0.31.4"
facet-reflect = "0.31.4"
sea-query = { version = "0.32.7", default-features = false }

[dev-dependencies]
sea-query = { version = "0.32.7", features = ["backend-postgres"] }
