[package]
name = "facet-owned-shape"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { git = "ssh://git@github.com/cramt/facet.git", branch = "cramt/shapelike", package = "facet" }
facet-core = { git = "ssh://git@github.com/cramt/facet.git", branch = "cramt/shapelike", package = "facet-core" }
facet-reflect = { git = "ssh://git@github.com/cramt/facet.git", branch = "cramt/shapelike", package = "facet-reflect" }
facet-shapelike = { git = "ssh://git@github.com/cramt/facet.git", branch = "cramt/shapelike", package = "facet-shapelike" }
facet-diff = { git = "ssh://git@github.com/cramt/facet.git", branch = "cramt/shapelike", package = "facet-diff" }
sea-query = { version = "0.32.7", default-features = false }
